Webserver configuration advancement
Webserver box configuration with copy, pip and file ansible modules to
complete various steps around configuration

--- a/ansible/plays/control.yml
+++ b/ansible/plays/control.yml
@@ -1,7 +1,7 @@
 ---
 -
   hosts: control_hub
-  sudo: true
+  become: true
   tasks:
     -
       apt: "name={{item}} state=present update_cache=yes"
