--- a/ansible/plays/database.yml
+++ b/ansible/plays/database.yml
@@ -1,7 +1,7 @@
 ---
 -
   hosts: database
-  sudo: true
+  become: true
   tasks:
     -
       apt: "name=mysql-server state=present update_cache=yes"
