--- a/ansible/plays/loadbalancer.yml
+++ b/ansible/plays/loadbalancer.yml
@@ -1,7 +1,7 @@
 ---
 -
   hosts: loadbalancer
-  sudo: true
+  become: true
   tasks:
     -
       apt: "name=nginx state=present update_cache=yes"
