--- a/ansible/plays/webserver.yml
+++ b/ansible/plays/webserver.yml
@@ -1,7 +1,7 @@
 ---
 -
   hosts: webserver
-  sudo: true
+  become: true
   tasks:
     -
       apt: "name={{item}} state=present update_cache=yes"
@@ -14,3 +14,38 @@
     -
       name: "ensure apache2 started and working as expected"
       service: "name=apache2 state=started enabled=true"
+
+    -
+      name: "ensure mod_wsgi is enabled"
+      apache2_module: "state=present name=wsgi"
+      notify: "restart apache2"
+
+    -
+      name: "copy demo app source"
+      copy: "src=demo/app/ dest=/var/www/demo mode=0755"
+      notify: "restart apache2"
+
+    -
+      name: "copy apache virtual host config"
+      copy: "src=demo/demo.conf dest=/etc/apache2/sites-available"
+      notify: "restart apache2"
+
+    -
+      name: "setup python virtualenv"
+      pip: "requirements=/var/www/demo/requirements.txt virtualenv=/var/www/demo/.venv"
+      notify: "restart apache2"
+
+    -
+      name: "de-activate default apache site"
+      file: "path=/etc/apache2/sites-enabled/000-default.conf state=absent"
+      notify: "restart apache2"
+
+    -
+      name: "activate demo site"
+      file: "src=/etc/apache2/sites-available/demo.conf dest=/etc/apache2/sites-enabled/demo.conf state=link"
+      notify: "restart apache2"
+
+  handlers:
+    -
+      name: "restart apache2"
+      service: "name=apache2 state=restarted"
