Encompassess many file  changes for below mentioned reasons:
1) Explored the concept of handlers
2) Hostname modification script added for allotting ec2 tag names to
hostname
3) Jinga2 templating explored for adding dynamic parts while script
execution

--- a/ansible/plays/control.yml
+++ b/ansible/plays/control.yml
@@ -1,10 +1,10 @@
 ---
 -
-  hosts: control_hub
   become: true
+  hosts: control_hub
   tasks:
     -
-      apt: "name={{item}} state=present update_cache=yes"
-      name: "install control dependencies"
+      apt: name={{item}} state=present update_cache=yes
+      name: install control dependencies
       with_items:
         - curl
