--- a/ansible/plays/allot_hostnames.yml
+++ b/ansible/plays/allot_hostnames.yml
@@ -1,35 +1,8 @@
 ---
 -
   become: true
-  hosts: localhost
-  tasks:
-    -
-      apt: "name={{item}} state=present update_cache=yes"
-      name: "install control dependencies"
-      with_items:
-        - python-pip
-    -
-      name: "install python dependencies"
-      pip: "name=boto version=2.46.1"
-    -
-      ec2_remote_facts: "aws_access_key={{access_key}} aws_secret_key={{secret_key}} region={{region}}"
-      name: "Searching Amazon for all EC2 instances"
-      register: ec2_instances
-    -
-      debug: var=ec2_instances
-    -
-      add_host: "name={{item.private_ip_address}} ansible_ssh_connection=ssh ansible_ssh_user=ubuntu"
-      name: "Add instance to inventory"
-      when: "item.private_ip_address is defined"
-      with_items: "{{ec2_instances.instances}}"
-  vars_files:
-    - ./vars/aws_credentials.yml
--
-  become: true
   hosts: all
   tasks:
     -
-      hostname: "name={{item.tags.Name}}"
+      hostname: "name={{ec2_tag_Name}}"
       name: "Hostname manipulation"
-      when: "inventory_hostname == item.private_ip_address"
-      with_items: "{{hostvars.localhost.ec2_instances.instances}}"
