--- a/ansible/plays/stack_restart.yml
+++ b/ansible/plays/stack_restart.yml
@@ -1,31 +1,31 @@
 ---
 -
   become: true
-  hosts: loadbalancer
+  hosts: tag_Name_loadbalancer_database
   tasks:
     -
       service: "name=nginx state=stopped"
 -
-  hosts: webserver
-  sudo: true
+  hosts: tag_Name_webserver
+  become: true
   tasks:
     -
       service: "name=apache2 state=stopped"
 -
-  hosts: database
-  sudo: true
+  hosts: tag_Name_loadbalancer_database
+  become: true
   tasks:
     -
       service: "name=mysql state=restarted"
 -
-  hosts: webserver
-  sudo: true
+  hosts: tag_Name_webserver
+  become: true
   tasks:
     -
       service: "name=apache2 state=started"
 -
-  hosts: loadbalancer
-  sudo: true
+  hosts: tag_Name_loadbalancer_database
+  become: true
   tasks:
     -
       service: "name=nginx state=started"
